@@ -1,11 +1,13 @@
 package com.matecat.converter.core.okapiclient.customfilters;
 
 import com.matecat.converter.core.util.Config;
-import net.sf.okapi.common.filters.IFilter;
-
 import java.io.File;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+import net.sf.okapi.common.filters.IFilter;
 
 public class CustomFiltersRouter implements ICustomFilter {
 
@@ -13,11 +15,13 @@ public class CustomFiltersRouter implements ICustomFilter {
 
     public CustomFiltersRouter() {
         customFilters = new ArrayList<>();
-        for (Class customFilter : Config.customFilters) {
+        for (Class<ICustomFilter> customFilter : Config.CUSTOM_FILTERS) {
             try {
-                customFilters.add((ICustomFilter) customFilter.newInstance());
-            } catch (InstantiationException|IllegalAccessException e) {
-                throw new RuntimeException("Error instantiating the custom filter "+ customFilter, e);
+                customFilters.add(customFilter.getDeclaredConstructor().newInstance());
+            } catch (InstantiationException | IllegalAccessException e) {
+                throw new RuntimeException("Error instantiating the custom filter " + customFilter, e);
+            } catch (NoSuchMethodException | SecurityException | IllegalArgumentException | InvocationTargetException ex) {
+                Logger.getLogger(CustomFiltersRouter.class.getName()).log(Level.SEVERE, null, ex);
             }
         }
     }
@@ -27,7 +31,9 @@ public class CustomFiltersRouter implements ICustomFilter {
         IFilter chosenFilter = null;
         for (ICustomFilter customFilter : customFilters) {
             chosenFilter = customFilter.getFilter(file);
-            if (chosenFilter != null) break;
+            if (chosenFilter != null) {
+                break;
+            }
         }
         return chosenFilter;
     }
